# 3d-streamer

./: .gitignore  E2E_VALIDATION.md  INFRA_PLAN.md  OBSERVABILITY.md  README  RUNBOOK.md  SERVER_DESIGN.md
.beads/: issues.jsonl
.github/workflows/: ci.yml  cloudflare-dns.yml  deploy-prod.yml  deploy-staging.yml
client/: index.html  package-lock.json  package.json
client/src/: config.js  main.js  style.css
client/tests/: config.test.js
docs/: web-client-streaming-receiver.md
e2e/: README.md  package.json  rtcp_probe.html  run-webrtc.js  smoke.sh
ops/nginx/: streamer.conf
server/: CMakeLists.txt
server/src/: json_util.c  json_util.h  main.c
server/tests/: test_json.c
